--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.FinManager" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.FinManager" parent="android:Theme.Material.Light.NoActionBar" >
+        <item name="android:windowSplashScreenBackground" tools:ignore="NewApi">@color/black</item>
+        <item name="android:windowSplashScreenAnimatedIcon" tools:ignore="NewApi">@drawable/ic_launcher_foreground</item>
+        <item name="android:windowSplashScreenAnimationDuration" tools:ignore="NewApi">500</item>
+        <item name="android:windowSplashScreenBehavior" tools:ignore="NewApi">icon_preferred</item>
+    </style>
 </resources>
